.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

4.0rc1 - Unreleased
-------------------

- Fix broken userid/login name in the password reset code. Fixes
  http://dev.plone.org/plone/ticket/10768
  [wichert]


4.0b5 - 2010-07-07
------------------

- Don't show the site's logo on the upgrade screen. Trying to render it can
  cause problems on not yet upgraded sites.
  [hannosch]

- No longer show relevance percentage numbers in search results. What matters
  to users is the search results order; the numbers are meaningless.
  [hannosch]

- No longer include a searchterm parameter in the query string when linking
  from the search results page, as it will be picked up from the referer.
  [davisagli]

- Fix the highlightsearchterms script to not apply highlighting within
  textareas, to avoid data loss. Fixes http://dev.plone.org/plone/ticket/10573
  [davisagli]

- Improved comment display and behavior: Now opens "Add comment" in an
  overlay, no longer insists on a Subject for every comment, and more readable
  layout. Also improved the error messages.
  [limi]

- Switching the default modal window effect to be a white-out instead of a
  darkened effect. With large windows, the darkening is very distracting, and
  it also reminds people of the UAC prompts from Windows Vista/7, which is not
  a good thing. ;)
  [limi]

- Removing action links from Events, since they are in the template (and were
  never supposed to have actions in the first place). This fixes
  http://dev.plone.org/plone/ticket/10540.
  [limi]

- Better icon for the theme control panel. (Thanks, Tango!)
  [limi]

- Added normalizeString to the Plone view interface, where the declaration was
  missing.
  [davisagli]

- Add a contenttype class to the items listed in select_default_page.cpt, so